--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fennec OS</title>
-    <link rel="icon" href="../fennec/src/assets/orange.svg"> 
+    <link rel="icon" href="/fennec/src/assets/HeroFennec.png"> 
     
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
